# verdure

./: .gitignore  .venv  README.md  appicon.icns  build_app.sh  pyproject.toml  run_app.py  verdure.spec
.github/workflows/: pages.yml
Casks/: pururum.rb
docs/: DEVLOG.md  REQUIREMENTS.md  UI-NOTES.md
editor-milkdown/: package-lock.json  package.json  test.html
editor-milkdown/src/: editor.js  helpers.js  image.js  math.js  quarto.js  table.js
editor-src/: align_test.cjs  autosave_test.cjs  chromium-tests.cjs  cmd_arrow_test.cjs  code_copy_scroll_test.cjs  code_test.cjs  debug_deco.cjs  draw_test.cjs  dup_test.cjs  dup_test2.cjs  export_math.cjs  export_probe.cjs  fixed_widget_test.cjs  font_probe.cjs  font_shot.cjs  icon_gen.cjs  image_modal_test.cjs  imgpopup_test.cjs  insert_test.cjs  interact_test.cjs  jsdom_test.cjs  list_cmp.cjs  list_shot.cjs  multiroot_test.cjs  object_ring_test.cjs  package-lock.json  package.json  pdf_view_test.cjs  probe.cjs  reflect_test.cjs  sidebar_test.cjs  smoke-tests.cjs  src_del_test.cjs  style_compare.cjs  table_center_test.cjs  table_debug.cjs  table_edit_test.cjs  table_modal_test.cjs  table_stress_test.cjs  tabs_test.cjs  (+7 more)
editor-src/src/: editor.js
editor-vditor/: package-lock.json  package.json  test.html
electron-shell/: main.js  package-lock.json  package.json  preload.js
quarto_viewer/: __init__.py  app.py
quarto_viewer/static/: doc.css  index-vditor.html  index.html  print.css
verdure-tauri/: package-lock.json  package.json
verdure-tauri/src-tauri/: Cargo.toml  tauri.conf.json
(+4 files in other folders)
