[project]
name = "quarto-viewer"
version = "0.1.0"
description = "Native macOS live editor + preview for Quarto (.qmd) files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pywebview>=6.2.1",
]

[project.scripts]
quarto-viewer = "quarto_viewer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quarto_viewer"]
